Added a texture to `CoordinateSystem`.

--- a/CoordinateSystems/CoordinateSystems.csproj
+++ b/CoordinateSystems/CoordinateSystems.csproj
@@ -14,4 +14,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="container.jpg" />
+    <EmbeddedResource Include="awesomeface.png" />
+  </ItemGroup>
+
 </Project>
