--- a/CoordinateSystems/CoordinateSystems.csproj
+++ b/CoordinateSystems/CoordinateSystems.csproj
@@ -5,7 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Silk.NET" Version="1.0.0-preview5" />
+    <PackageReference Include="Silk.NET" Version="1.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
