--- a/HelloWindow/HelloWindow.csproj
+++ b/HelloWindow/HelloWindow.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Silk.NET" Version="1.0.0-preview5" />
+    <PackageReference Include="Silk.NET" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
