--- a/Textures/Textures.csproj
+++ b/Textures/Textures.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Silk.NET" Version="1.0.0-preview5" />
+    <PackageReference Include="Silk.NET" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
