--- a/Transformations/Transformations.csproj
+++ b/Transformations/Transformations.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Silk.NET" Version="1.0.0-preview5" />
+    <PackageReference Include="Silk.NET" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
