--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Silk.NET" Version="1.0.0-preview5" />
+    <PackageReference Include="Silk.NET" Version="1.0.0" />
     <PackageReference Include="StbImageSharp" Version="2.22.4" />
   </ItemGroup>
 
